public/assets/css/lareponse.css
/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap'); */
@font-face {
    font-family: 'Poppins';
    src: local('Poppins Light'), local('Poppins-Light'),
        url('/public/assets/font/Poppins-Light.woff2') format('woff2'),
        url('/public/assets/font/Poppins-Light.woff') format('woff');
    font-weight: 300;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Poppins';
    src: local('Poppins Regular'), local('Poppins-Regular'),
        url('/public/assets/font/Poppins-Regular.woff2') format('woff2'),
        url('/public/assets/font/Poppins-Regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Poppins';
    src: local('Poppins Medium'), local('Poppins-Medium'),
        url('/public/assets/font/Poppins-Medium.woff2') format('woff2'),
        url('/public/assets/font/Poppins-Medium.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Poppins';
    src: local('Poppins SemiBold'), local('Poppins-SemiBold'),
        url('/public/assets/font/Poppins-SemiBold.woff2') format('woff2'),
        url('/public/assets/font/Poppins-SemiBold.woff') format('woff');
    font-weight: 600;
    font-style: normal;
    font-display: swap;
}

:root {

    --primary: #D3121B;
    --secondary: #9E9EA7;
    --secondary-dark: #6D6D73;
    --light: #F5F7FD;
    --dark: #4B4B4D;
    --white: #ffffff;
    --black: #111111;
    --link-color-rgb: 212, 19, 25;
    --primary-rgb: 212, 19, 25;
    --link-hover-color-rgb: 212, 19, 25;
    --shadow: rgba(0, 0, 0, .10);
}




body {
    font-family: 'Poppins', sans-serif;
    font-weight: normal;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.7;
    letter-spacing: 0.4px;
    color: var(--bs-black);
    background: var(--bs-white);
}

body>header nav li {
    text-align: right;
    /* padding-right: 1rem; removed on desktop view, confirm  */
}

/* header#header img.logo {height: 45px;} */
.navbar-brand img {
    height: 3rem;
}

body>main:not(.home) {
    margin-top: 3rem;
    /* 50px = 3.125em */
}

body>main {
    position: relative;
}

.sib-form {
    padding: 0;
}

dl.signaletique dt,
dl.signaletique dd {
    width: 50%;
    box-sizing: border-box;
    float: left;
}


dl.signaletique dt {
    font-weight: bold;
    font-weight: bold;
    clear: left;
}

dl:after {
    content: "";
    display: table;
    clear: both;
}

aside form label {
    text-transform: uppercase;
    color: var(--bs-primary);
    font-weight: bold;
}

aside form {
    background: var(--bs-white);
    padding: 0.7em;
}

#home-rdv-annonce article .date-item .otto-date {
    text-transform: uppercase;
}

article.card.event-item .date-item {
    justify-content: flex-end;
}

/* h3.card-title, .card-text {color: var(--bs-white);} */
.card-img-overlay h3,
.card-img-overlay p {
    color: var(--bs-white);
}

aside.filtres {
    background: var(--bs-white);
    padding: 1rem;
}

aside.filtres header {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

aside.filtres header button {
    background: none;
    border: none;
    color: var(--bs-primary);
    text-transform: uppercase;
    font-weight: bold;
    line-height: initial;
}

.filtres label {
    text-transform: uppercase;
    color: var(--bs-primary);
    font-weight: bold;

}

#scroll-to-top {
    opacity: 0.5;
    height: 2rem;
    width: 2rem;
    position: fixed;
    bottom: 1rem;
    left: 1rem;
    z-index: 2;

}

#scroll-to-top:hover {
    opacity: 1;
}



.share {
    display: flex;
    align-items: center;

    font-size: 0.9rem;
    text-transform: uppercase;
    font-weight: 500;
}

.share.compact {
    display: block;
}

.share.compact .socials {
    margin-left: 0;
}

.share.tiny,
.share.tiny .actions,
.share.tiny .actions>* {
    display: block;
    margin-top: 1rem;
}

.share i {
    font-size: 1.2rem;
    padding: 0;
}

.share .print {
    text-transform: uppercase;
    font-weight: 600;
    font-size: 0.85rem;
    cursor: pointer;
    display: flex;
    align-items: center;
    gap: 0.5rem;
}

.share .actions {
    display: flex;
    flex-grow: 1;
    justify-content: space-between;
}

.comma:not(:empty):not(:last-child):after {
    content: ", ";
}


.catalog img {
    height: 15rem;
    object-fit: cover;
    border-radius: 0.7rem 0.7rem 0 0;
}



article.card.listing .date-item {
    justify-content: center;
}

.card .card-title {
    color: var(--bs-primary);
    text-transform: uppercase;

}

.card-movie em {
    font-style:normal;
}

.card-movie .meta {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    text-transform: uppercase;
    /* background:var(--bs-black); */
}

.card-movie .meta.professional {
    background-color: black;
    color: var(--bs-white);
    font-size: 0.8rem;
    margin-bottom: 0;
    display: inline;
    
    float: right;
    padding:3px 6px;
}

.card-movie strong {
    display:block;
    padding: 0;
    margin: 0.5rem 0;
    grid-column: span 2;
    text-align: center;
    font-size: 1.1rem;
    color: var(--black);
}
.card-movie .date{
    color: var(--secondary-dark);
}


.card-complex {
    background: black;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto auto auto;
    border-radius: 0.7rem;
}


.card-complex *:first-child,
.card-complex *:last-child {
    grid-column: span 2;
}

.card-complex *:nth-child(2),
.card-complex *:nth-child(3) {
    padding: 0.5rem 1rem 0rem 1rem;
}

.card-complex *:nth-child(3) {
    text-align: right;
}

.card-complex .card-title {
    color: white;
    text-transform: uppercase;
    text-align: center;
    padding: 1rem 0;
}

.card-complex:not(.slide) img:hover {
    filter: grayscale(99%);
    transition: all 0.5s ease-in-out;
}

.card-professional>:not(img) {
    padding: 0 1rem 0.5rem 1rem;
}
/* ... */

